base/waiting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: waiting-service
spec:
  selector:
    app: waiting-service
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
